crates/oxc_css_parser/tests/error/at-rule/media/unmatched-parens-1.snap
---
source: crates/oxc_css_parser/tests/error.rs
---
error: expect token `{`, but found `)`
  ┌─ unmatched-parens-1.css:1:24
  │
1 │ @media (extra: bracket)) {
  │                        ^


